--- a/README
+++ b/README
@@ -7,10 +7,15 @@ Copyright (c) 2006-2012 Laurent Couvidou
 http://lorancou.free.fr/index.php5?page=project&id-unix=minus
 Contact: lorancou@free.fr
 
-For the 2D canvas context rendering:
+For the 2D canvas context rendering, code is derived from:
 Ajax3d - a 3d engine using the WHATWG HTML <canvas> tag.
 Copyright (c) 2007-2012 Eben Upton
 http://ajax3d.sourceforge.net/
+
+Dependencies used and their licenses:
+ - jQuery: jquery.org/license
+ - gl-matrix: https://github.com/toji/gl-matrix/blob/master/LICENSE.md
+ - webgl-utils: Copyright 2010, Google Inc. http://bit.ly/eZ90Dj
 
 ---------------------------------------------------------------------------------
   LICENSE
